--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="new.css">
-	
+	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script type="text/javascript" src="main.js"></script>
@@ -74,8 +74,8 @@
 
 
 <main>
+    <section class="container">
     <h2 class="section-heading">Shinning Blogs of the Day</h2>
-<section>
 	<div class="row">
 	<div class="col-md-6">
         <section>
