--- a/health.html
+++ b/health.html
@@ -86,16 +86,16 @@
                 <img src="img/health.jpg" alt="Card Image">
             </div>
             <div class="cards-description description">
-                <h3 align="center"><q style="color: blue">Making a difference by extending a helping hand for a social cause is like prestidigitating the magic of highest prestige.</q></h3>
+                <h3 align="center"><q style="color: blue"></q></h3>
                 <p>Coronavirus cases are quickly increasing across the globe. This surge in coronavirus cases has crippled health systems in many countries, primarily due to shortage of hospital beds, manpower and equipment (personal protective equipment, ventilators etc). Countries affected by this severe problem responded in multiple ways – China built hospitals with thousands of temporary beds in a short period, the United Kingdom urged community members to volunteer with the National Health Service to tackle the problem. However, for India, which aspects of the healthcare sector can be truly binding constraints in the short-run?<p/>
                 <p>The sudden outbreak of this pandemic has proved that India’s Health Infrastructure is insufficient for the treatment of a huge number of infected people simultaneously. Apart from these patients, there are people who are dying everyday from other chronic diseases and accidents due to the lack of availability of doctors. Almost all of the doctors and medical staff is already preoccupied in the treatment and looking after coronavirus patients performing their duties. 
                     In these past days we came across a variety of unfortunate events where people have been facing problems to consult a doctor. Even in emergency cases where the patient requires immediate and proper treatment, it seems that they are denied treatment.</p>
                 <p>As a solution to this problem, We bring to this platform where the patients or their family/friends can directly contact the doctors registered on our site in for medical consultation and treatment.</p> 
 
-                <h3 class="page-heading" align="center" style="color: black">Register yourself as doctor</h3>
+                <h3 class="page-heading" align="center" style="color: black">For Doctors</h3>
                 <p>Through this platform, We request doctors to please provide us with some of the necessary details about themselves, so that people who need to consult them can  easily contact these doctors. This way, the people can easily contact the doctors in case of emergencies and medical help.</p>
                 <a href="https://form.jotform.com/jsform/201056389311046" onclick="myFunction()" id="my" class="btn-readmore">Register Yourself Here</a> 
-                <h3 class="page-heading" align="center" style="color: black">Register yourself as patient</h3>
+                <h3 class="page-heading" align="center" style="color: black">For Patients</h3>
                 <p>If you or anyone you know is in need to consult a doctor for medical help, diagnosis and treatment, please provide us with some necessary details and type of disease/treatment required and you would be able to see a list of available doctors. We would provide you with their contact information.</p>
                 <a href="https://form.jotform.com/jsform/201056672827053" onclick="myFunction()" id="my" class="btn-readmore">Register Yourself Here</a> 
 
