--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
         <a class="nav-link" href="https://station.ch/en/just-smile">Just Smile</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#about">About Us</a>
+        <a class="nav-link" href="index.html#about">About Us</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -62,7 +62,7 @@
           <a class="dropdown-item" href="#">Gift a Feeling To The People At Risk</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#contact">Contact Us</a>
+        <a class="nav-link" href="index.html#contact">Contact Us</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -139,7 +139,7 @@ Watch a funny movie. Laugh. Laugh. Laugh!  It really IS the best medicine. You c
                         <a href="https://station.ch/en/just-smile">Just Smile</a>
                     </li>
                     <li>
-                        <a href="index.html">About Us</a>
+                        <a href="index.html#about">About Us</a>
                     </li>
                     <li>
                         <a href="index.html">Missions</a>
@@ -148,7 +148,7 @@ Watch a funny movie. Laugh. Laugh. Laugh!  It really IS the best medicine. You c
                         <a href="index.html">Services</a>
                     </li>
                     <li>
-                        <a href="index.html">Contact Us</a>
+                        <a href="index.html#contact">Contact Us</a>
                     </li>
                 </ul>
             </p>
