--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 </section>
 <!--Our Services-->
 <main>
+<section id="services">
     <h2 class="section-heading">Our Services</h2>
-<section>
 	<div class="row">
 	<div class="col-md-6">
         <section>
@@ -223,7 +223,7 @@
     </main>
 <!--Our Missions-->
 
-<section>
+<section id="missions">
 <div class ="container">
 	<h1>Missions</h1>
 </div>
