--- a/health.html
+++ b/health.html
@@ -38,7 +38,7 @@
         <a class="nav-link" href="https://station.ch/en/just-smile">Just Smile </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="index.html">About Us</a>
+        <a class="nav-link" href="index.html#about">About Us</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -48,8 +48,8 @@
           <a class="dropdown-item" href="donate.html">Donate for the Cause</a>
           <a class="dropdown-item" href="volunteer.html">Engaging Volunteers</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Ensuring Health</a>
-        <a class="dropdown-item" href="#">Providing Psychological Relaxation</a>
+          <a class="dropdown-item" href="health.html">Ensuring Health</a>
+        <a class="dropdown-item" href="blog.html">Providing Psychological Relaxation</a>
         </div>
       </li>
       <li class="nav-item dropdown">
@@ -57,13 +57,13 @@
           Services
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Door to Door Drone Grocery Delivery</a>
+          <a class="dropdown-item" href="dronedelivery.html">Door to Door Drone Grocery Delivery</a>
           <a class="dropdown-item" href="hero.html">Salute to the Heros of the Day</a>
-          <a class="dropdown-item" href="#">Sharing Experiences With The World</a>
+          <a class="dropdown-item" href="blog.html">Sharing Experiences With The World</a>
           <a class="dropdown-item" href="#">Gift a Feeling To The People At Risk</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="index.html">Contact Us</a>
+        <a class="nav-link" href="index.html#contact">Contact Us</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -119,16 +119,16 @@
                         <a href="https://station.ch/en/just-smile">Just Smile</a>
                     </li>
                     <li>
-                        <a href="index.html">About Us</a>
+                        <a href="index.html#about">About Us</a>
                     </li>
                     <li>
-                        <a href="index.html">Missions</a>
+                        <a href="index.html#missions">Missions</a>
                     </li>
                     <li>
-                        <a href="index.html">Services</a>
+                        <a href="index.html#services">Services</a>
                     </li>
                     <li>
-                        <a href="index.html">Contact Us</a>
+                        <a href="index.html#contact">Contact Us</a>
                     </li>
                 </ul>
             </p>
