--- a/hero.html
+++ b/hero.html
@@ -39,7 +39,7 @@
         <a class="nav-link" href="https://station.ch/en/just-smile">Just Smile </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="index.html">About Us</a>
+        <a class="nav-link" href="index.html#about">About Us</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -49,7 +49,7 @@
           <a class="dropdown-item" href="donate.html">Donate for the Cause</a>
           <a class="dropdown-item" href="volunteer.html">Engaging Volunteers</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Ensuring Health</a>
+          <a class="dropdown-item" href="health.html">Ensuring Health</a>
         <a class="dropdown-item" href="blog.html">Providing Psychological Relaxation</a>
         </div>
       </li>
@@ -64,7 +64,7 @@
           <a class="dropdown-item" href="#">Gift a Feeling To The People At Risk</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="index.html">Contact Us</a>
+        <a class="nav-link" href="index.html#contact">Contact Us</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -111,16 +111,16 @@
                         <a href="https://station.ch/en/just-smile">Just Smile</a>
                     </li>
                     <li>
-                        <a href="index.html">About Us</a>
+                        <a href="index.html#about">About Us</a>
                     </li>
                     <li>
-                        <a href="index.html">Missions</a>
+                        <a href="index.html#missions">Missions</a>
                     </li>
                     <li>
-                        <a href="index.html">Services</a>
+                        <a href="index.html#services">Services</a>
                     </li>
                     <li>
-                        <a href="index.html">Contact Us</a>
+                        <a href="index.html#contact">Contact Us</a>
                     </li>
                 </ul>
             </p>
